WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202075
clip-path: <geometry-box> mapping incorrect
https://bugs.webkit.org/show_bug.cgi?id=202075
Summary
clip-path: <geometry-box> mapping incorrect
Dirk Schulze
Reported
2019-09-21 02:19:59 PDT
The mapping of the <geometry-box> for clip-path is implemented differently than in the spec:
https://drafts.fxtf.org/css-masking-1/#the-clip-path
Spec changed after requests of the CSS WG to match the mapping in Fill And Stroke and CSS Transform spec.
https://github.com/w3c/fxtf-drafts/commit/2c7d4824101be55bcc0b4604fb3ac86b86176227
Attachments
Patch
(3.55 KB, patch)
2019-09-21 09:37 PDT
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
Patch
(9.17 KB, patch)
2019-09-23 09:35 PDT
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
Patch for landing
(9.01 KB, patch)
2019-10-05 09:23 PDT
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2019-09-21 09:37:39 PDT
Created
attachment 379318
[details]
Patch
Dirk Schulze
Comment 2
2019-09-21 10:04:34 PDT
Hm. Seems like we don’t have tests in place for this change. All bots are green. Will upload a test.
Darin Adler
Comment 3
2019-09-21 11:33:28 PDT
Comment on
attachment 379318
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=379318&action=review
> Source/WebCore/ChangeLog:14 > + Covered by existing tests.
If this is covered by existing tests, then why wasn’t there a failing test that changes to succeeding when we fix the bug?
Darin Adler
Comment 4
2019-09-21 11:33:45 PDT
Oh, I see your comment now, sorry!
Dirk Schulze
Comment 5
2019-09-23 09:35:42 PDT
Created
attachment 379375
[details]
Patch
Nikolas Zimmermann
Comment 6
2019-09-24 09:40:25 PDT
Comment on
attachment 379375
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=379375&action=review
LGTM.
> Source/WebCore/rendering/shapes/BoxShape.cpp:86 > + // stroke, view-box compute to border-box for HTML elements.
s/stroke/stroke-box/?
Simon Fraser (smfr)
Comment 7
2019-10-02 14:55:12 PDT
Comment on
attachment 379375
[details]
Patch This looks like it conflicts with your other patch.
Dirk Schulze
Comment 8
2019-10-05 09:23:36 PDT
Created
attachment 380286
[details]
Patch for landing
Dirk Schulze
Comment 9
2019-10-05 09:25:49 PDT
Similar to
https://bugs.webkit.org/show_bug.cgi?id=201892
Not sure if I don't have committer rights anymore (last path last year) or if there is a mistake in the contributions.json file. Simon, could you cq+ please?
WebKit Commit Bot
Comment 10
2019-10-07 11:35:07 PDT
Comment on
attachment 380286
[details]
Patch for landing Clearing flags on attachment: 380286 Committed
r250778
: <
https://trac.webkit.org/changeset/250778
>
WebKit Commit Bot
Comment 11
2019-10-07 11:35:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12
2019-10-07 11:36:17 PDT
<
rdar://problem/56044543
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug