clip-path: <geometry-box> mapping incorrect https://bugs.webkit.org/show_bug.cgi?id=202075

Patch by Dirk Schulze <krit@webkit.org> on 2019-10-07
Reviewed by Simon Fraser.

For HTML elements:
- stroke-box, view-box consistently compute to border-box
- fill-box computes to content-box

Source/WebCore:

Tests: css3/masking/clip-path-border-radius-fill-box-001.html
       css3/masking/clip-path-border-radius-stroke-box-000.html
       css3/masking/clip-path-border-radius-view-box-000.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint):
* rendering/shapes/BoxShape.cpp:
(WebCore::computeRoundedRectForBoxShape):

LayoutTests:

* css3/masking/clip-path-border-radius-fill-box-001-expected.html: Added.
* css3/masking/clip-path-border-radius-fill-box-001.html: Added.
* css3/masking/clip-path-border-radius-stroke-box-000-expected.html: Added.
* css3/masking/clip-path-border-radius-stroke-box-000.html: Added.
* css3/masking/clip-path-border-radius-view-box-000-expected.html: Added.
* css3/masking/clip-path-border-radius-view-box-000.html: Added.

Canonical link: https://commits.webkit.org/216107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250778 268f45cc-cd09-0410-ab3c-d52691b4dbfc